--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #fff;
+  background-color: blue;
   color: #222;
   margin: 0;
   text-align: center;
